--- a/main.css
+++ b/main.css
@@ -36,14 +36,29 @@ li {
   height: 631px;
   width: 1284px;
   background-position: center;
-
+  margin-top: 50px;
 }
 
 .header-link {
   color: black;
   text-decoration: none;
+  text-align: center;
+  font-size: 18px;
 }
 
 .header-intro {
   font-size: 20px;
+}
+
+.header-sm-title {
+  text-transform: uppercase;
+  font-size: 40px;
+}
+
+.header-lg-title {
+  font-size: 50px;
+  font-weight: lighter;
+}
+
+.header-items {
 }
